umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_uranocene_staggered.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D8d
order: 32
equivalence_sets:
  - - U(0)
  - - C(1)
    - C(2)
    - C(3)
    - C(4)
    - C(5)
    - C(6)
    - C(7)
    - C(8)
    - H(9)
    - H(10)
    - H(11)
    - H(12)
    - H(13)
    - H(14)
    - H(15)
    - H(16)
  - - C(17)
    - C(18)
    - C(19)
    - C(20)
    - C(21)
    - C(22)
    - C(23)
    - C(24)
    - H(25)
    - H(26)
    - H(27)
    - H(28)
    - H(29)
    - H(30)
    - H(31)
    - H(32)
