umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_xenontetrafluoride.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: D4h
order: 16
equivalence_sets:
  - - Xe(0)
  - - F(1)
    - F(2)
    - F(3)
    - F(4)
